FIX: Flexbox item overflow issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,33 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   height: 100vh;
   width: 100vw;
   margin: 0;
   min-width: 320px;
-  overflow: hidden;
   background-color: #ffffff;
+  display: flex;
+}
+
+main {
+  display: flex;
+  flex: 1;
 }
 
 .content-wrapper {
   display: flex;
-  height: 100vh;
-  flex-direction: row;
+  flex: 1;
   justify-content: center;
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.content:first-child {
+  margin-top: auto;
+}
+
+.content:last-child {
+  margin-bottom: auto;
 }
 
 p {
@@ -36,8 +46,4 @@ a {
 
 a:hover {
   color: #ff5400;
-}
-
-.box {
-  position: absolute;
 }
